Add logic to display player and comupter scores

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
         <div class="resultDisplay"></div>
+        <div class="runningScore">
+            <div id="playerScore"></div>
+            <div id="computerScore"></div>
+        </div>
             
 
 
